# keyboard_sub

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
envs/: pg.env  web.env
keyboard_sub/: manage.py
keyboard_sub/project/: asgi.py  settings.py  urls.py  wsgi.py
keyboard_sub/subscriber/: admin.py  apps.py  models.py  subscriber.py
keyboard_sub/subscriber/locale/ru/LC_MESSAGES/: django.mo  django.po
keyboard_sub/subscriber/migrations/: 0001_initial.py
suhrob_sub/: manage.py
suhrob_sub/keys/private_keys/: client.key_secret
suhrob_sub/keys/public_keys/: client.key  server.key
suhrob_sub/subscriber/: admin.py  apps.py  subscriber.py
suhrob_sub/subscriber/migrations/: 0001_initial.py
suhrob_sub/suhrob/: asgi.py  settings.py  urls.py  wsgi.py
